<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment"
    >
    <fragment
        tools:layout="@layout/fragment_parking"
        android:id="@+id/parkingFragment"
        android:name="com.example.parkingqr.ui.components.parking.ParkingFragment"
        android:label="@string/parking_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_scan"
        android:id="@+id/scanFragment"
        android:name="com.example.parkingqr.ui.components.parking.ScanFragment"
        android:label="@string/scan_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_home"
        android:id="@+id/homeFragment"
        android:name="com.example.parkingqr.ui.components.home.HomeFragment"
        android:label="@string/home_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_invoice_list"
        android:id="@+id/invoiceListFragment"
        android:name="com.example.parkingqr.ui.components.invoice.InvoiceListFragment"
        android:label="@string/invoice_list_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_invoice_detail"
        android:id="@+id/invoiceDetailFragment"
        android:name="com.example.parkingqr.ui.components.invoice.InvoiceDetailFragment"
        android:label="@string/invoice_detail_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_login"
        android:id="@+id/loginFragment"
        android:name="com.example.parkingqr.ui.components.login.LoginFragment"
        android:label="@string/login_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_signup"
        android:id="@+id/signUpFragment"
        android:name="com.example.parkingqr.ui.components.signup.SignUpFragment"
        android:label="@string/signup_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_my_debt"
        android:id="@+id/mydebtFragment"
        android:name="com.example.parkingqr.ui.components.userdebt.UserDebtFragment"
        android:label="@string/mydebt_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_my_invoice"
        android:id="@+id/myinvoiceFragment"
        android:name="com.example.parkingqr.ui.components.userinvoice.UserInvoiceFragment"
        android:label="@string/myinvoice_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_my_profile"
        android:id="@+id/myprofileFragment"
        android:name="com.example.parkingqr.ui.components.userprofile.UserProfileFragment"
        android:label="@string/myprofile_fragment_name">
        <action
            android:id="@+id/action_myprofileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpToInclusive="true"
            app:popUpTo="@id/loginFragment"
            />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_my_notification"
        android:id="@+id/mynotificationFragment"
        android:name="com.example.parkingqr.ui.components.usernotification.UserNotification"
        android:label="@string/mynotification_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_register_vehicle"
        android:id="@+id/registerVehicleFragment"
        android:name="com.example.parkingqr.ui.components.registervehicle.RegisterVehicleFragment"
        android:label="@string/register_vehicle_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_vehicle_registration_list"
        android:id="@+id/vehicleRegistrationListFragment"
        android:name="com.example.parkingqr.ui.components.registervehicle.VehicleRegistrationListFragment"
        android:label="@string/vehicle_registration_list_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_vehicle_detail"
        android:id="@+id/vehicleDetailFragment"
        android:name="com.example.parkingqr.ui.components.registervehicle.VehicleDetailFragment"
        android:label="@string/register_vehicle_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_my_invoice_detail"
        android:id="@+id/myInvoiceDetailFragment"
        android:name="com.example.parkingqr.ui.components.userinvoice.UserInvoiceDetailFragment"
        android:label="@string/invoice_detail_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_user_management"
        android:id="@+id/userManagementFragment"
        android:name="com.example.parkingqr.ui.components.usermanagement.UserManagementFragment"
        android:label="@string/user_management_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_user_detail"
        android:id="@+id/userDetailFragment"
        android:name="com.example.parkingqr.ui.components.usermanagement.UserDetailFragment"
        android:label="@string/user_management_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_vehicle_management"
        android:id="@+id/vehicleManagementFragment"
        android:name="com.example.parkingqr.ui.components.vehiclemanagement.VehicleManagementFragment"
        android:label="@string/vehicle_management_fragment_name">
    </fragment>
    <fragment
        tools:layout="@layout/fragment_vehicle_detail_admin"
        android:id="@+id/vehicleDetailAdminFragment"
        android:name="com.example.parkingqr.ui.components.vehiclemanagement.VehicleDetailAdminFragment"
        android:label="@string/vehicle_management_fragment_name">
    </fragment>
</navigation>